syntax = "proto3";
package subnet.app.verifier;

message SignatureRequest {
	int64 app_id = 1;
	int64 provider_id = 2;
}

message SignatureResponse {
	SignedUsage signedUsage = 1;
}

message UsageReport {
	int64 app_id = 1;
	int64 provider_id = 2;
	string peer_id = 3;
	int64 cpu = 4;
	int64 gpu = 5;
	int64 memory = 6;
	int64 storage = 7;
	int64 upload_bytes = 8;
	int64 download_bytes = 9;
	int64 timestamp = 10;
}

message SignedUsage {
	int64 app_id = 1;
	int64 provider_id = 2;
	string peer_id = 3;
	int64 cpu = 4;
	int64 gpu = 5;
	int64 memory = 6;
	int64 storage = 7;
	int64 upload_bytes = 8;
	int64 download_bytes = 9;
	int64 duration = 10;
	int64 timestamp = 11;
	bytes signature = 12;
	bytes hash = 13;
}

message Msg {
	oneof data {
		SignatureRequest SignatureRequest = 1;
		SignatureResponse SignatureResponse = 2;
		UsageReport UsageReport = 3;
	}
}

message UsageInfo {
	UsageReport previous_usage_report = 1;
	SignedUsage signedUsage = 2;
}

message PowRequest {
  string id = 1;
  int64 difficulty = 2;
}

message PowResponse {
  string id = 1;
  string hash = 2;
  int64 nonce = 3;
}
