syntax = "proto3";

package subnet.vpn;

message VirtualIPInfo {
  string ip = 1;
  int64 timestamp = 2;
}

message VirtualIPRecord {
  VirtualIPInfo info = 1;
  bytes signature = 2;
}